crates/alder-solve/tests/snapshots/inference__polymorphic_identity.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn identity(value) { value }"
---
identity: forall a. fn(a) a
