crates/alder-solve/tests/snapshots/inference__repeated_tag_payloads_must_have_the_same_arity.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn invalid(flag: Bool) Result[()] {\n    if flag {\n        Err(:invalid(\"text\"))\n    } else {\n        Err(:invalid(\"text\", 1))\n    }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 4,
                column: 12,
            },
            end: Position {
                line: 6,
                column: 6,
            },
        },
        kind: Arity {
            expected: 1,
            actual: 2,
        },
        expectation: Some(
            Expectation {
                kind: Branch,
                origin: Some(
                    Region {
                        start: Position {
                            line: 2,
                            column: 13,
                        },
                        end: Position {
                            line: 4,
                            column: 6,
                        },
                    },
                ),
            },
        ),
    },
]
