crates/alder-solve/tests/snapshots/inference__repeated_tag_payloads_must_have_the_same_type.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn invalid(flag: Bool) Result[()] {\n    if flag {\n        Err(:invalid(\"text\"))\n    } else {\n        Err(:invalid(1))\n    }\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 4,
                column: 12,
            },
            end: Position {
                line: 6,
                column: 6,
            },
        },
        kind: Mismatch {
            actual: Named(
                "Number",
            ),
            expected: Named(
                "String",
            ),
        },
    },
]
