crates/alder-solve/tests/snapshots/inference__result_shorthand_infers_an_open_tag_row_with_payloads.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn fail(id: Number) Result[String] {\n    Err(:not_found(id))\n}\n"
---
fail: forall a. fn(Number) Result[String, [:not_found(Number) | a]]
