crates/alder-solve/tests/snapshots/inference__rigid_vars_do_not_unify.snap
---
source: crates/alder-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (cast)\n\ncast : a -> b\ncast x = x\n"
---
[
    BadExpr(
        Region {
            start: Position {
                line: 4,
                column: 10,
            },
            end: Position {
                line: 4,
                column: 11,
            },
        },
        Local(
            "x",
        ),
        RigidVar(
            "a",
        ),
        FromAnnotation(
            "cast",
            1,
            TypedBody,
            RigidVar(
                "b",
            ),
        ),
    ),
]
