crates/alder-solve/tests/snapshots/inference__string_literal.snap
---
source: crates/alder-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (greeting)\n\ngreeting = \"hello\"\n"
---
greeting : String
